<resources>
    <string name="app_name">Mis libros favoritos</string>
    <string name="bar_icon_1_desc">Primer icono contenedor superior</string>
    <string name="lbl_bar_content">Mis libros favoritos</string>
    <string name="icon_bar_3_desc">Icono para mostrar opciones</string>
    <string name="icon_bar_2_desc">Icono para añadir un libro a la lista</string>
    <string name="title_page_book">Portada de libro</string>
    <string name="lbl_noBook_value">Añadir libro</string>
    <string name="libro_eliminado">Libro %1$s eliminado</string>
    <string name="deshacer_borrado"><b>Deshacer</b></string>
    <string name="menu_addBook">Añadir libro</string>
    <string name="addBookActivity_title">Agregar libro</string>
    <string name="lbl_book_title">Título</string>
    <string name="lbl_book_author">Autor/a</string>
    <string name="lbl_book_year">Año de publicación</string>
    <string name="lbl_book_title_page_url">URL Portada</string>
    <string name="lbl_book_synopsis">Sinopsis</string>
    <string name="icon_noBook_desc">Icono para mostrar si no hay libros</string>
    <string name="form_error">Se debe rellenar todos los campos del formulario</string>
</resources>